--- a/semana01/dia01-html/estilos.css
+++ b/semana01/dia01-html/estilos.css
@@ -1,3 +1,11 @@
-p {
-  color: orange;
+body {
+  background-color: hsl(30, 38%, 92%);
+
+  font-size: 14px;
+}
+
+main {
+  border: 1px solid red;
+
+  width: 650px;
 }
