--- a/semana01/dia01-html/estilos.css
+++ b/semana01/dia01-html/estilos.css
@@ -21,14 +21,16 @@ body {
 }
 
 main {
-
-  border: 1px solid red;
+  border: 4px solid red;
 
   width: 650px;
 
   min-height: 400px;
 
   display: flex;
+
+  border-radius: 14px;
+  overflow: hidden;
 }
 
 .photo {
@@ -42,7 +44,30 @@ main {
 }
 
 .content {
-  background-color: orange;
+  background-color: hsl(0, 0%, 100%);
 
   width: 300px;
+
+  padding: 28px;
+}
+
+.content h3 {
+  /* border: 1px solid blue; */
+  
+  margin: 0; /* resetea el margen de este h3 */
+
+  text-transform: uppercase;
+  font-weight: 500;
+  color: hsl(228, 12%, 48%);
+  font-size: 14px;
+  letter-spacing: 7px;
+}
+
+.content h1 {
+  margin: 0;
+  /*
+    font-family: ????;
+    font-size: ????;
+    color: ????;
+  */
 }
