--- a/semana01/dia01-html/estilos.css
+++ b/semana01/dia01-html/estilos.css
@@ -21,7 +21,7 @@ body {
 }
 
 main {
-  border: 4px solid red;
+  /* border: 4px solid red; */
 
   width: 650px;
 
@@ -49,6 +49,10 @@ main {
   width: 300px;
 
   padding: 28px;
+
+  display: flex;
+  flex-direction: column;
+  gap: 21px;
 }
 
 .content h3 {
@@ -69,6 +73,12 @@ main {
   font-size: 42px; /* 14px * 3 = 42px */
   color: hsl(212, 21%, 14%);
   font-weight: 700;
+}
+
+.content div {
+  display: flex;
+  align-items: center;
+  gap: 14px;
 }
 
 .content p {
@@ -102,4 +112,8 @@ main {
   padding: 14px;
   border-radius: 7px;
   cursor: pointer;
+
+  display: flex;
+  justify-content: center;
+  gap: 7px;
 }
