--- a/semana01/dia02-html-reto/estilos.css
+++ b/semana01/dia02-html-reto/estilos.css
@@ -4,8 +4,52 @@ body {
   background-color: hsl(234, 29%, 20%);
   font-size: 16px;
   font-family: "Roboto", sans-serif;
+
+  display: flex;
+  justify-content: center; /* Alineación horizontal*/
+  align-items: center; /* Alineación vertical */
+
+  height: 100vh;
 }
 
 main {
   background-color: hsl(0, 0%, 100%);
+
+  width: 650px;
+  min-height: 450px;
+
+  border-radius: 32px;
+
+  /* padding: 24px; */
+  /* padding-top: 24px;
+  padding-right: 24px;
+  padding-bottom: 24px;
+  padding-left: 48px; */
+
+  padding: 24px 24px 24px 48px;
+
+  display: flex;
 }
+
+.content {
+  border: 1px solid red;
+
+  width: 400px;
+}
+
+.photo {
+  /* border: 1px solid blue; */
+
+  width: 350px;
+
+  background-image: url('./assets/images/illustration-sign-up-desktop.svg');
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
+/*
+TODO: Terminar el diseño de la newsletter 
+Tiempo: 20 minutos
+- Empezamos a las 8:05pm
+- Terminamos a las 8:25pm
+*/
