--- a/semana01/dia02-html-reto/estilos.css
+++ b/semana01/dia02-html-reto/estilos.css
@@ -15,8 +15,8 @@ body {
 main {
   background-color: hsl(0, 0%, 100%);
 
-  width: 650px;
-  min-height: 450px;
+  width: 800px;
+  min-height: 500px;
 
   border-radius: 32px;
 
@@ -32,9 +32,53 @@ main {
 }
 
 .content {
-  border: 1px solid red;
+  /* border: 1px solid red; */
 
   width: 400px;
+
+  padding-right: 64px;
+
+  color: hsl(235, 18%, 26%);
+}
+
+.content h1 {
+  margin: 0;
+  margin-top: 48px;
+
+  font-size: 48px;
+  font-weight: 700;
+  color: hsl(235, 18%, 26%);
+}
+
+.content p {
+  font-weight: 400;
+}
+
+.content form {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+
+.content label {
+  display: flex;
+  flex-direction: column;
+  font-weight: 700;
+  gap: 8px;
+}
+
+.content input {
+  border: 1px solid hsl(231, 7%, 60%);
+  padding: 16px;
+  border-radius: 8px;
+}
+
+.content input[type=submit] {
+  background-color: hsl(234, 29%, 20%);
+  color: white;
+  font-weight: 700;
+  font-family: inherit;
+  cursor: pointer;
 }
 
 .photo {
@@ -43,9 +87,11 @@ main {
   width: 350px;
 
   background-image: url('./assets/images/illustration-sign-up-desktop.svg');
-  background-size: contain;
+  background-size: cover;
   background-repeat: no-repeat;
 }
+
+
 
 /*
 TODO: Terminar el diseño de la newsletter 
