semana02, dia01, reto1

--- a/semana02/dia01-04-reto1/css/styles.css
+++ b/semana02/dia01-04-reto1/css/styles.css
@@ -65,6 +65,7 @@ input[type=submit] {
   border-radius: 8px;
   padding: 16px;
   font-weight: 700;
+  letter-spacing: 1px;
 }
 
 input[type=submit]:hover {
