--- a/semana02/dia02-02-landing-page-modelo-de-caja-css/css/styles.css
+++ b/semana02/dia02-02-landing-page-modelo-de-caja-css/css/styles.css
@@ -1,11 +1,44 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
+
+/* 
+font-family: "Raleway", sans-serif;
+font-family: "Open Sans", serif;
+*/
+
+/* GENERAL */
+
+* { /* Selector universal */
+  box-sizing: border-box;
+  margin: 0;
+}
+
+html {
+  font-size: 14px;
+}
+
+body {
+  font-family: "Open Sans", serif;
+
+  background-color: hsl(217, 28%, 15%);
+  color: hsl(0, 0%, 100%);
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+img {
+  /* TODO: RWD para imágenes */
+}
+
+/* UTILS */
+
 .hidden {
   display: none;
 }
 
-body {
-  background-color: aquamarine;
-}
-
+/* HEADER SECTION */
 
 .header {
   border: 1px solid red;
@@ -18,8 +51,6 @@ body {
 }
 
 .header__nav {
-  border: 1px solid blue;
-
   display: flex;
   gap: 48px;  /* 16px * 3 = 48px */
 }
