--- a/semana02/dia02-02-landing-page-modelo-de-caja-css/css/styles.css
+++ b/semana02/dia02-02-landing-page-modelo-de-caja-css/css/styles.css
@@ -60,3 +60,17 @@ img {
   display: flex;
   gap: 48px;  /* 16px * 3 = 48px */
 }
+
+/* HERO SECTION */
+
+.hero {
+  border: 1px solid blue;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 32px;
+
+  padding-top: 48px;
+  padding-bottom: 48px;
+}
