--- a/semana02/dia02-02-landing-page-modelo-de-caja-css/css/styles.css
+++ b/semana02/dia02-02-landing-page-modelo-de-caja-css/css/styles.css
@@ -43,7 +43,7 @@ img {
 .wrapper {
   /* width: 1000px; */
   /* TODO: Adaptar el ancho de la página a dispositivos móviles */
-  width: min(100% - 48px, 1440px);
+  width: min(100% - 3rem, 1440px); /* 42px = 14px * 3 = 3rem */
 }
 
 /* HEADER SECTION */
@@ -56,12 +56,12 @@ img {
   align-items: center;
   
   margin: 0 auto; /* 0: TOP, BOTTOM / auto: LEFT, RIGHT */
-  margin-top: 48px; /* 16px * 3 = 48px */
+  margin-top: 3rem; /* 14px * 3 = 42px = 3rem */
 }
 
 .header__nav {
   display: flex;
-  gap: 48px;  /* 16px * 3 = 48px */
+  gap: 3rem;  /* 14px * 3 = 42px = 3rem */
 }
 
 /* HERO SECTION */
@@ -72,8 +72,10 @@ img {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 32px;
+  gap: 2rem; /* 14px * 2 = 28px = 2rem */
 
-  padding-top: 48px;
-  padding-bottom: 48px;
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+
+  
 }
