--- a/semana03/dia02-01-ecommerce-html-css/css/styles.css
+++ b/semana03/dia02-01-ecommerce-html-css/css/styles.css
@@ -29,3 +29,34 @@ a {
 .hidden {
   display: none;
 }
+
+.wrapper {
+  
+}
+
+/* HEADER */
+
+.header {
+  /* border: 1px solid red; */
+
+  height: 4.5rem; /* 4.5 * 16px = 72px */
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  padding: 1.5rem 1rem;
+  border-bottom: 1px solid hsl(223, 64%, 98%);
+}
+
+.header__wrapper {
+  display: flex;
+  align-items: center;
+  gap: 2rem;
+}
+
+.header__icons {
+  display: flex;
+  align-items: center;
+  gap: 2rem;
+}
