--- a/semana03/dia02-01-ecommerce-html-css/css/styles.css
+++ b/semana03/dia02-01-ecommerce-html-css/css/styles.css
@@ -42,8 +42,6 @@ a {
 /* HEADER */
 
 .header {
-  border: 1px solid red;
-
   height: 4.5rem; /* 4.5 * 16px = 72px */
 
   display: flex;
@@ -73,3 +71,5 @@ a {
   gap: 1rem;
   color: hsl(220, 14%, 75%);
 }
+
+/* */
