--- a/semana03/dia02-01-ecommerce-html-css/css/styles.css
+++ b/semana03/dia02-01-ecommerce-html-css/css/styles.css
@@ -108,13 +108,22 @@ a {
   /* border: 1px solid red; */
 
   display: flex;
+  flex-direction: column;
   align-items: center;
   gap: 5rem;
 
-  padding: 3rem 3rem;
+  padding: 0;
 }
 
-/* TODO: Añadir el media query para la clase product-detail */
+/* DONE: Añadir el media query para la clase product-detail */
+
+@media(min-width: 1200px) {
+  .product-detail {
+    flex-direction: row;
+
+    padding: 3rem 3rem;
+  }
+}
 
 /* GALLERY */
 
@@ -125,12 +134,23 @@ a {
 }
 
 .gallery__cover {
-  border-radius: 1rem;
+}
+
+@media(min-width: 1200px) {
+  .gallery__cover  {
+    border-radius: 1rem;
+  }
 }
 
 .gallery__slider {
-  display: flex;
+  display: none;
   justify-content: space-between;
+}
+
+@media(min-width: 1200px) {
+  .gallery__slider {
+    display: flex;
+  }
 }
 
 .gallery__slider div {
