--- a/semana03/dia03-01-ecommerce-html-css-custom-props-modules/css/styles.css
+++ b/semana03/dia03-01-ecommerce-html-css-custom-props-modules/css/styles.css
@@ -7,6 +7,32 @@
 1200px -> pantallas grandes (Desktops, TVs)
 */
 
+/* CUSTOM PROPERTIES  - VARIABLES */
+
+:root {
+  /* --micolor: red; */
+
+  /* FONTS */
+
+  --font-primary: "Kumbh Sans", serif;
+  --font-size: 16px;
+  --font-weight-regular: 400;
+  --font-weight-bold: 700;
+
+  /* COLORS */
+
+  --primary-color-orange: hsl(26, 100%, 55%);
+  --primary-color-pale-orange: hsl(25, 100%, 94%);
+
+  --neutral-color-very-dark-blue: hsl(218, 12.10%, 12.90%);
+  --neutral-color-dark-grayish-blue: hsl(219, 9%, 45%);
+  --neutral-color-grayish-blue: hsl(220, 14%, 75%);
+  --neutral-color-light-grayish-blue: hsl(223, 64%, 98%);
+
+  --neutral-color-white: hsl(0, 0%, 100%);
+  --neutral-color-black: hsl(0, 0%, 0%);
+}
+
 /* GENERAL */
 
 * {
@@ -15,11 +41,12 @@
 }
 
 html {
-  font-size: 16px; /* Por defecto */
+  font-size: var(--font-size); /* Por defecto */
 }
 
 body {
-  font-family: "Kumbh Sans", serif;
+  font-family: var(--font-primary); 
+  /* background-color: var(--micolor); */
 }
 
 img {
@@ -56,7 +83,7 @@ a {
   align-items: center;
 
   padding: 1.5rem 1rem;
-  border-bottom: 1px solid hsl(223, 64%, 98%);
+  border-bottom: 1px solid var(--neutral-color-light-grayish-blue);
 }
 
 .header__wrapper {
@@ -91,9 +118,9 @@ a {
 .header__links {
   display: none;
   font-size: .9rem;
-  font-weight: 400; /* Por defecto */
+  font-weight: var(--font-weight-regular); /* Por defecto */
   gap: 1rem;
-  color: hsl(220, 14%, 75%);
+  color: var(--neutral-color-grayish-blue);
 }
 
 @media (min-width: 1200px) {
@@ -143,7 +170,7 @@ a {
 .gallery__prev-button {
   position: absolute;
 
-  background-color: white;
+  background-color: var(--neutral-color-white);
   width: 50px;
   height: 50px;
   border-radius: 50%;
@@ -200,7 +227,7 @@ a {
 }
 
 .gallery__slider--active {
-  border: 3px solid hsl(26, 100%, 55%);
+  border: 3px solid var(--primary-color-orange);
 }
 
 .gallery__slider--active img {
@@ -217,12 +244,12 @@ a {
   font-size: 1rem;
   font-weight: 700;
   text-transform: uppercase;
-  color: hsl(219, 9%, 45%);
+  color: var(--neutral-color-dark-grayish-blue);
   letter-spacing: .2rem;
 }
 
 .product__title {
-  color: hsl(220, 13%, 13%);
+  color: var(--neutral-color-very-dark-blue);
   font-size: 3rem; /* 2rem = 32px */
   margin-top: 1rem;
   font-weight: 700;
@@ -231,7 +258,7 @@ a {
 .product__description {
   margin-top: 1rem;
   line-height: 1.5;
-  color: hsl(219, 9%, 45%);
+  color: var(--neutral-color-dark-grayish-blue);
 }
 
 .product__price {
@@ -261,21 +288,21 @@ a {
 
 .product__amount {
   font-size: 2rem;
-  font-weight: 700;
+  font-weight: var(--font-weight-bold);
 }
 
 .product__discount {
-  background-color: hsl(220, 13%, 13%);
-  color: hsl(0, 0%, 100%);
+  background-color: var(--neutral-color-very-dark-blue);
+  color: var(--neutral-color-whites);
 
   padding: 0.1rem .5rem;
   border-radius: .5rem;
 
-  font-weight: 400;
+  font-weight: var(--font-weight-regular);
 }
 
 .product__price-with-discount {
-  color: hsl(219, 9%, 45%);
+  color: var(--neutral-color-dark-grayish-blue);
   text-decoration: line-through;
 }
 
@@ -310,11 +337,11 @@ a {
   width: 4rem;
   height: 4rem;
 
-  background-color: hsl(223, 64%, 98%);
+  background-color: var(--neutral-color-light-grayish-blue);
 }
 
 .product__quantity input {
-  font-weight: 700;
+  font-weight: var(--font-weight-bold);
   font-size: 1.4rem;
   text-align: center;
 
@@ -328,14 +355,14 @@ a {
 }
 
 .product__add-to-cart {
-  background-color: hsl(26, 100%, 55%);
+  background-color: var(--primary-color-orange);
   border: 0;
   padding: 1rem;
   height: 4rem;
 
   border-radius: .5rem;
-  color: hsl(220, 13%, 13%);
-  font-weight: 700;
+  color: var(--neutral-color-very-dark-blue);
+  font-weight: var(--font-weight-bold);
   font-size: 1.1rem;
 
   cursor: pointer;
@@ -348,5 +375,5 @@ a {
 }
 
 .product__add-to-cart svg path {
-  fill: hsl(218, 12.10%, 12.90%);
+  fill: var(--neutral-color-very-dark-blue);
 }
