--- a/semana04/dia01-01-mi-portafolio-con-figma/css/styles.css
+++ b/semana04/dia01-01-mi-portafolio-con-figma/css/styles.css
@@ -19,9 +19,38 @@
   --primary-color-white: #FFFFFF;
 }
 
-body {
+/* GENERAL */
+
+* {
+  box-sizing: border-box;
 }
 
-.header {
+html {
+  font-size: var(--font-size);
+}
 
+body {
+  font-family: var(--font-family);
+  background-color: var(--primary-color-blue2);
+  color: var(--primary-color-white);
+
+  margin: 0;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+/* UTILS */
+
+.wrapper {
+  width: min(100% - 3rem, 1220px);
+  margin: 0 auto;
+}
+
+/* HEADER */
+
+.header {
+  border: 1px solid red;
 }
