semana04, dia01, mi portafolio usando figma (resolviendo el reto)

--- a/semana04/dia01-01-mi-portafolio-con-figma/css/styles.css
+++ b/semana04/dia01-01-mi-portafolio-con-figma/css/styles.css
@@ -92,3 +92,11 @@ a {
   align-items: center;
   gap: 0.5rem;
 } 
+
+/* TODO: Terminar la sección hero usando css */
+
+/* HERO SECTION */
+
+.hero {
+  border: 1px solid red;
+}
