--- a/semana04/dia01-01-mi-portafolio-con-figma/css/styles.css
+++ b/semana04/dia01-01-mi-portafolio-con-figma/css/styles.css
@@ -98,5 +98,60 @@ a {
 /* HERO SECTION */
 
 .hero {
+  /* border: 1px solid red; */
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 3rem;
+
+  padding: 2rem;
+}
+
+.hero__gretting {
+  font-size: 2rem;
+  font-weight: var(--font-weight-bold);
+  text-transform: capitalize;
+
+  margin: 0;
+}
+
+.hero__gretting span {
+  color: var(--primary-color-gold);
+  text-decoration: underline;
+}
+
+.hero__title {
+  font-size: 3rem; /* 48px / 16px = 3rem */
+  font-weight: var(--font-weight-bold);
+  text-transform: capitalize;
+
+  margin: 0;
+}
+
+.hero__description {
+  font-size: 1.5rem;
+  font-weight: var(--font-weight-regular);
+  text-transform: capitalize;
+
+  margin: 0;
+}
+
+.hero__photo {
+  border-radius: 50%;
+}
+
+.stack {
   border: 1px solid red;
+
+  display: grid;
+  gap: 1.5rem;
+  /* grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr; */
+  grid-template-columns: repeat(6, 1fr);
+}
+
+/* FOOTER */
+
+.footer {
+
 }
