semana04, dia01, mi portafolio usando figma (resolviendo el reto)

--- a/semana04/dia01-01-mi-portafolio-con-figma/css/styles.css
+++ b/semana04/dia01-01-mi-portafolio-con-figma/css/styles.css
@@ -116,7 +116,7 @@ a {
   background-image: url(../images/bg.svg);
   background-repeat: no-repeat;
   background-position: bottom;
-  background-color: contain;
+  background-size: contain;
 }
 
 .hero__gretting {
