semana04, dia01, mi portafolio usando figma (resolviendo el reto)

--- a/semana04/dia01-01-mi-portafolio-con-figma/css/styles.css
+++ b/semana04/dia01-01-mi-portafolio-con-figma/css/styles.css
@@ -197,6 +197,10 @@ a {
 
 /* TODO: terminar esta parte de la maquetación para el próximo jueves 9/01/25 */
 
+.skills {
+  border: 1px solid red;
+}
+
 /* PROJECTS SECTION */
 
 /* TODO: terminar esta parte de la maquetación para el próximo jueves 9/01/25 */
