--- a/semana04/dia02-01-css-grid-flexbox-dashboard/styles.css
+++ b/semana04/dia02-01-css-grid-flexbox-dashboard/styles.css
@@ -16,6 +16,12 @@
 
 body {
   height: 100vh;
+
+  display: grid;
+  grid-template-columns: 300px 1fr 200px;
+  grid-template-rows: 60px 1fr;
+
+  /* Templates Areas */
 }
 
 .header {
