--- a/semana04/dia02-01-css-grid-flexbox-dashboard/styles.css
+++ b/semana04/dia02-01-css-grid-flexbox-dashboard/styles.css
@@ -18,7 +18,7 @@ body {
   height: 100vh;
 
   display: grid;
-  grid-template-columns: 300px 1fr 200px;
+  grid-template-columns: 100px 1fr 0px;
   grid-template-rows: 60px 1fr;
 
   /* Templates Areas */
@@ -28,30 +28,87 @@ body {
   ;
 }
 
+.hidden {
+  display: none;
+}
+
+/* DASHBOARD */
+
 .header {
   background-color: var(--bg-1);
 
   grid-area: header;
+
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  padding: 0 1.5rem;
+}
+
+.header__menu,
+.header__settings {
+  cursor: pointer;
 }
 
 .sidebar {
   grid-area: sidebar;
 
   background-color: var(--bg-2);
+
+  padding: 1rem;
 }
 
 .settings {
   grid-area: settings;
 
   background-color: var(--bg-2);
+
+  padding: 1rem;
+
+  display: none;
 }
 
 .main {
   grid-area: main;
 
   background-color: var(--bg-3);
+
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+
+  grid-template-areas: 
+    "card1 card2 card3"
+    "card4 card4 card5"
+    "card4 card4 card6"
+  ;
 }
 
 .card {
   background-color: var(--bg-4);  
+}
+
+.card:nth-child(1) {
+  grid-area: card1;
+}
+
+.card:nth-child(2) {
+  grid-area: card2;
+}
+
+.card:nth-child(3) {
+  grid-area: card3;
+}
+
+.card:nth-child(4) {
+  grid-area: card4;
+}
+
+.card:nth-child(5) {
+  grid-area: card5;
+}
+
+.card:nth-child(6) {
+  grid-area: card6;
 }
