--- a/semana04/dia02-01-css-grid-flexbox-dashboard/styles.css
+++ b/semana04/dia02-01-css-grid-flexbox-dashboard/styles.css
@@ -3,6 +3,8 @@
   --bg-2: #f3d2c1;
   --bg-3: #8bd3dd;
   --bg-4: #f582ae;
+
+  /* --sidebarWidth: 300px; */
 }
 
 /* RESET */
@@ -18,7 +20,7 @@ body {
   height: 100vh;
 
   display: grid;
-  grid-template-columns: 100px 1fr 0px;
+  grid-template-columns: var(--sidebarWidth, 100px) 1fr 0px;
   grid-template-rows: 60px 1fr;
 
   /* Templates Areas */
@@ -59,6 +61,10 @@ body {
   padding: 1rem;
 }
 
+body:has(.sidebar--open) {
+  --sidebarWidth: 300px;
+}
+
 .settings {
   grid-area: settings;
 
@@ -83,10 +89,21 @@ body {
     "card4 card4 card5"
     "card4 card4 card6"
   ;
+
+  gap: 2rem;
+
+  padding: 1rem;
 }
 
 .card {
-  background-color: var(--bg-4);  
+  background-color: var(--bg-4);
+
+  border-radius: .5rem;
+
+  font-size: 2rem;
+
+  display: grid;
+  place-content: center;
 }
 
 .card:nth-child(1) {
